--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,17 @@
   </head>
   <body>
     <%- include('header') %>
+    <form method="get" action="/">
+        <select name="category" id="category" onchange="if(this.value===''){window.location='/' } else { this.form.submit(); }">
+          <option value="" 
+          <%= selectedCategory == "" ? "selected" : "" %>>All</option>
+          <% categories.forEach((category, index)=> { %>
+              <% const {category_id, category_name} = category %>
+              <option value="<%= category_id %>" 
+                  <%= selectedCategory == category_id ? "selected" : "" %>><%= category_name %></option>
+         <% }) %>
+        </select>
+    </form>
     <div class="itemsDiv">
 
       <% items.forEach((item, index) => { %>
