feat: adds image upload

--- a/src/views/addNewItem.ejs
+++ b/src/views/addNewItem.ejs
@@ -23,6 +23,7 @@
       id="newItemForm"
       method="post"
       action="/item/new"
+      enctype="multipart/form-data"
       onsubmit="validateForm(event)"
     >
     <div class="inputContainer">
