--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -56,7 +56,7 @@
     
                     <!-- Hidden popup menu -->
                 <div id="popupMenu-<%= index %>" class="popupMenu hidden">
-                    <form method="get" action="/item/<%= item.item_id %>/edit">
+                    <form method="get" action="/item/update/<%= item.item_id %>">
                     <button type="submit">Update</button>
                     </form>
                     <form method="post" action="/item/<%= item.item_id %>/delete">
