--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="/styles.css" />
     <title></title>
     <script>
+        document.addEventListener("DOMContentLoaded", ()=>{       
+            const dialog = document.getElementById("confirmDialog");
+            const cancelBtn = document.getElementById("cancelBtn");
+            const confirmBtn = document.getElementById("confirmBtn");
+
+            let formToSubmit = null; // Store the form to submit
+            
+            // Show Dialog
+            document.querySelectorAll("[id^='deleteBtn-']").forEach((btn)=>{
+                btn.addEventListener("click", ()=>{
+                    const item_id = btn.id.split("-")[1];
+                    formToSubmit = document.getElementById(`deleteForm-${item_id}`);
+                    dialog.showModal();
+                })
+            })
+
+            // Confirm button submits the form
+            confirmBtn.addEventListener("click", ()=>{
+                if (!formToSubmit) return;
+                formToSubmit.submit();
+            })
+
+            // Close dialog
+            cancelBtn.addEventListener("click", () => {
+                dialog.close();
+            })
+        })
+
         function toggleMenu(index) {
           const menu = document.getElementById(`popupMenu-${index}`);
       
@@ -30,6 +58,15 @@
   </head>
   <body>
     <%- include('header') %>
+    <!-- Item Delete confirm dialog -->
+    <dialog id="confirmDialog">
+        <h4>Are you sure you want to delete this item?</h4>
+        <p>This action is irreversible.</p>
+        <div class="dialogBtnWrapper">
+            <button id="cancelBtn">Cancel</button>
+            <button id="confirmBtn">Confirm</button>
+        </div>
+      </dialog>
    
 
     <!-- Category Select -->
@@ -48,7 +85,7 @@
     <!-- Items listing -->
     <div class="itemsDiv">
       <% items.forEach((item, index) => { %>
-        <% const {item_name, item_description, item_image, item_price, item_quantity} = item %>
+        <% const {item_id, item_name, item_description, item_image, item_price, item_quantity} = item %>
         <div class="itemContainer">
             <div class="menuWrapper">
 
@@ -56,11 +93,11 @@
     
                     <!-- Hidden popup menu -->
                 <div id="popupMenu-<%= index %>" class="popupMenu hidden">
-                    <form method="get" action="/item/update/<%= item.item_id %>">
-                    <button type="submit">Update</button>
+                    <form method="get" action="/item/update/<%= item_id %>">
+                        <button type="submit">Update</button>
                     </form>
-                    <form method="post" action="/item/<%= item.item_id %>/delete">
-                    <button type="submit">Delete</button>
+                    <form id="deleteForm-<%= item_id %>" method="post" action="/item/delete/<%= item_id %>?_method=DELETE">
+                        <button id="deleteBtn-<%= item_id %>" type="button">Delete</button>
                     </form>
                 </div>
             </div>
